[tool.poetry]
name = "xgdeeplearning"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.24.1"
pandas = "^1.5.2"
sklearn = "^0.0.post1"
keras = "^2.11.0"
tensorflow-macos = "^2.11.0"
matplotlib = "^3.6.2"
plotly = "^5.11.0"
statsbombpy = "^1.6.1"
tqdm = "^4.64.1"
socceraction = "0.2.0"
xgboost = "^1.7.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.19.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
